Fix scroll glitch with expand/collapse actions.

--- a/src/style/list.less
+++ b/src/style/list.less
@@ -21,6 +21,7 @@ section {
 
 				a {
 					color: fade(@TextColorB, 25);
+					float: left;
 					text-decoration: none;
 
 					&::before {
